# VPTV.github.io

./: .gitignore  CMakeLists.txt  README.md  index.md
apps/: CMakeLists.txt
apps/lptOptitrack/: optitrackcams.cpp
apps/lptVirtual/: virtualcams.cpp
data/input/: P.txt  camera_pairs_parameters.yaml  cameras.yaml  cameras_calibrated.yaml  cameras_parameters.yaml  pairs.yaml  pairs_calibrated.yaml
data/tests/: spiral.txt  synthetic.txt
data/tests/pivstd/6cams/: 0_pts.yaml  1_pts.yaml  2_pts.yaml  3_pts.yaml  4_pts.yaml  5_pts.yaml  camera_pairs.yaml  cameras.yaml
data/tests/pivstd/6cams - Copy/: 0_pts.yaml  1_pts.yaml  2_pts.yaml  3_pts.yaml  4_pts.yaml  5_pts.yaml  camera_pairs - Copy.yaml  camera_pairs.yaml  cameras.yaml
modules/: CMakeLists.txt
modules/calib/include/: calib.hpp
modules/calib/src/: calib.cpp
modules/core/include/: core.hpp  utilities.hpp
modules/core/src/: utilities.cpp
modules/correspond/: CMakeLists.txt
modules/correspond/include/: correspond.hpp
modules/correspond/src/: correspond.cpp
modules/dataaquisition/include/: dataaquisition.hpp
modules/dataaquisition/src/: dataaquisition.cpp
modules/datagen/include/: datagen.hpp
modules/datagen/src/: datagen.cpp
modules/gpu/: CMakeLists.txt
modules/gpu/include/: correspondcuda.h
modules/gpu/src/: correspondcuda.cu
modules/imageproc/: CMakeLists.txt
modules/imageproc/include/: imageproc.hpp
modules/imageproc/src/: imageproc.cpp  imageproc.cu
modules/tracking/include/: tracking.hpp
modules/tracking/src/: tracking.cpp
modules/visualization/: CMakeLists.txt
modules/visualization/include/: visualization.hpp
modules/visualization/src/: visualization.cpp
scripts/cmake/: FindNP_CAMERASDK.cmake  FindYamlCpp.cmake  LptCmakeMacros.cmake
test/: CMakeLists.txt  README.md
test/mp1_synchronization/: CMakeLists.txt  main.cpp
test/mp3_imageProcessing/: CMakeLists.txt  main.cpp
test/mp4_correspondence/: CMakeLists.txt  main.cpp
test/mp5_tracking/: CMakeLists.txt
tutorials/installation/: README.md
tutorials/mp1/: README.md
tutorials/mp2/: README.md
tutorials/mp3/: README.md
tutorials/mp4/: README.md
tutorials/mp5/: README.md
